[update] subida de data actividades deportivas, ci3m, modificacion de etl en el query

--- a/CONTENEDORES/ETL-1/docker-compose.yaml
+++ b/CONTENEDORES/ETL-1/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
       - ./output_data:/app/output_data
     environment:
       # Conectamos al localhost del host. Requiere network_mode: host
-      - OLLAMA_HOST=http://localhost:11434/api/generate
+      - OLLAMA_HOST=http://127.0.0.1:11434/api/generate
       # La pregunta clave para validar el contenido
-      - SYSTEM_PROMPT_QUESTION="¿El siguiente texto contiene información sobre los requisitos para realizar el servicio social en la UAM?"
+      # - SYSTEM_PROMPT_QUESTION="¿El siguiente texto contiene información sobre los requisitos para realizar el servicio social en la UAM?"
     # Permite que el contenedor acceda a los servicios del host (como Ollama en localhost)
     network_mode: host
